--- a/A태그실습예제2/style.css
+++ b/A태그실습예제2/style.css
@@ -1,3 +1,22 @@
 * {
   margin: 0;
 }
+
+body {
+  text-align: center;
+  background-color: #000;
+}
+
+img {
+  width: 400px;
+  margin: 30px;
+}
+
+.newpage {
+  width: 450px;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: #fff;
+  margin: 20px auto;
+  padding: 20px;
+}
