--- a/20230516BoxLineup/style.css
+++ b/20230516BoxLineup/style.css
@@ -38,3 +38,32 @@
   display: flex;
   /* justify-content: flex-start; */
 }
+
+.right-float div {
+  float: right;
+}
+/* 상위 박스 요소를 오른쪽으로 보내고
+정렬하고자 하는 하위 박스 요소를 왼쪽으로 정렬하여
+순서가 뒤집히지 않게끔 정렬한 것. */
+.right-float div div {
+  /* div>div>div 라서 */
+  float: left;
+}
+
+.right-inline {
+  text-align: right;
+}
+
+.right-inline div {
+  display: inline-block;
+  text-align: left;
+  /* text-align : 문단을 수평으로 정렬하는 속성 */
+  /* block 요소 안에 있는 inline 요소를 정렬한다. */
+  /* text를 정렬할 때는 자기 자신에게 적용 가능 */
+  /* inline 요소라면 text뿐 아니라 이미지도 정렬 가능 */
+}
+
+.right-flex {
+  display: flex;
+  justify-content: flex-end;
+}
