--- a/20230517Boxlayout/float/style.css
+++ b/20230517Boxlayout/float/style.css
@@ -2,6 +2,7 @@
   width: 800px;
   text-align: center;
   margin: 0 auto;
+  font-weight: bold;
 }
 
 .header {
@@ -10,11 +11,11 @@
 }
 
 .box1 {
-  height: 50px;
+  height: 100px;
 }
 
 .box2 {
-  height: 400px;
+  height: 500px;
 }
 
 .left-box {
