--- a/20230517Boxlayout/flex/style.css
+++ b/20230517Boxlayout/flex/style.css
@@ -1,32 +1,42 @@
 .wrapper {
-  width: 1200px;
+  width: 90%;
   margin: 0 auto;
   font-size: 36px;
 }
 
 .layout {
   display: flex;
-  flex-direction: row;
+  /* wrap 속성은 기본값이 nowrap */
+  /* 폭이 넘쳐도 아래로 떨어지지 않는다. */
+  flex-wrap: wrap;
 }
 
 .header {
+  /* 가변성 */
+  /* 부모 요소가 차지하고 있는 width값의 100% */
+  width: 100%;
   height: 100px;
+  /* order : 3; */
   background-color: aquamarine;
 }
 
 .left-box {
-  width: 200px;
+  width: 20%;
   height: 500px;
+  /* order : 2; */
   background-color: cornflowerblue;
 }
 
 .right-box {
-  width: 1000px;
+  width: 80%;
   height: 500px;
+  /* order : 1; */
   background-color: coral;
 }
 
 .footer {
+  width: 100%;
   height: 100px;
+  /* order : 0; */
   background-color: lightgreen;
 }
