--- a/20230518FlexEX1/CSS/style.css
+++ b/20230518FlexEX1/CSS/style.css
@@ -88,3 +88,27 @@ nav {
   border: none;
   font-weight: 700;
 }
+
+
+
+.first-box {
+  margin-top: -70px;
+}
+
+/* .first-box div : .first-box 라는 클래스 내부 모든 div 태그 */
+/* .first-box > div : 좌측 클래스 내부 div 중 자식 div 태그 (자식-손자 개념) */
+.first-box > div {
+  width: 500px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+  border-radius: 20px;
+  box-shadow: 2px 2px gray;
+}
+
+.first-box p {
+  margin-top: 20px;
+}
+
