--- a/20230518FlexEX1/CSS/style.css
+++ b/20230518FlexEX1/CSS/style.css
@@ -98,7 +98,7 @@ nav {
 /* .first-box div : .first-box 라는 클래스 내부 모든 div 태그 */
 /* .first-box > div : 좌측 클래스 내부 div 중 자식 div 태그 (자식-손자 개념) */
 .first-box > div {
-  width: 500px;
+  width: 50%;
   margin: 0 auto;
   padding: 40px 20px;
   text-align: center;
@@ -116,3 +116,31 @@ nav {
   margin-top: 20px;
 }
 
+
+
+.post-box-list {
+  display: flex;
+  margin-top: 80px;
+  justify-content: center;
+}
+
+.post-box-item {
+  width: 250px;
+  margin-right: 30px;
+  padding: 80px 20px;
+  color: #fff;
+  text-align: center;
+  background-color: #000;
+  border-radius: 20px;
+  /* x, y 값 양수 : 우측, 하단 */
+  /* x, y 값 음수 : 좌측, 상단 */
+  box-shadow: 5px 5px #666;
+}
+
+.post-box-item:last-child {
+  margin-right: 0;
+}
+
+.post-box-item p {
+  margin-top: 30px;
+}
