--- a/20230515Mypage/style.css
+++ b/20230515Mypage/style.css
@@ -85,6 +85,7 @@ body {
   수정 시 검색하여 일괄 적용 용이 (통일 속성 이용) */
   margin-top: 30px;
   color: #fff;
+  font-family: 'Dancing Script', cursive;
 }
 
 /* img {
