--- a/20230523CSSposition/CSS/Style.css
+++ b/20230523CSSposition/CSS/Style.css
@@ -3,3 +3,45 @@
   /* 앞 폰트 비적용 시 기본 폰트 sans-serif, serif 글자체 차이 */
   font-family: 'Nanum Myeongjo', serif;
 }
+
+.wrapper {
+
+}
+
+.position {
+  /* position: relative; absolute 기준 */
+  width: 500px;
+  height: 800px;
+  margin: 0 auto;
+  border: 3px solid darkblue;
+}
+
+.position div {
+  width: 200px;
+  height: 100px;
+  border: 1px solid black;
+  text-align: center;
+  /* 박스 내에서 텍스트를 수직 중앙에 배치 시키기 위해 사용 */
+  line-height: 100px;
+}
+
+.box1 {
+  /* position: relative;
+  top: 30px;
+  left: 30px; */
+  background-color: red;
+}
+
+.box2 {
+  position: fixed;
+  top: 50px;
+  right: 50px;
+  background-color: yellow;
+}
+
+.box3 {
+  position: sticky;
+  top: 30px;
+  left: 30px;
+  background-color: yellowgreen;
+}
