--- a/20230523CSSposition/CSS/Style.css
+++ b/20230523CSSposition/CSS/Style.css
@@ -8,6 +8,10 @@
 
 }
 
+h1 {
+  text-align: center;
+}
+
 .position {
   /* position: relative; absolute 기준 */
   width: 500px;
@@ -35,13 +39,45 @@
 .box2 {
   position: fixed;
   top: 50px;
-  right: 50px;
+  left: 50px;
+  /* position을 가진 속성 중 누가 앞에 오고 뒤에 갈 건지 순서 결정 
+    z-index 숫자가 클 수록 앞으로 배치된다. */
+  z-index: 10; /* 평균적으로 10단위, 100단위로 사용 */
   background-color: yellow;
 }
 
 .box3 {
-  position: sticky;
+  position: absolute;
+  /* position: sticky; */
   top: 30px;
   left: 30px;
+  z-index: 20;
   background-color: yellowgreen;
 }
+
+
+
+.cat-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  background-color: black;
+}
+
+.cat {
+  width: 500px;
+  height: 500px;
+  background-color: #fff;
+  background-image: url(../images/cat.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  /* 배경 이미지의 스크롤 여부를 정하는 속성 : 기본값은 scroll */
+  background-attachment: fixed;
+}
+
+.scroll {
+  height: 1000px;
+}
+
