--- a/20230524Position1/CSS/style.css
+++ b/20230524Position1/CSS/style.css
@@ -10,6 +10,8 @@ li {
 
 a {
   text-decoration: none;
+  color: black;
+  font-weight: 700;
 }
 
 hr {
@@ -29,17 +31,17 @@ nav {
 .spi img {
   width: 80px;
   height: 70px;
+  position: absolute;
+  top: -5px;
 }
 
 .menu-con {
-  color: #000;
   display: flex;
   width: 300px;
   justify-content: space-between;
 }
 
 .menu {
-  color: #000;
   font-weight: 700;
   text-shadow: -2px 0 0 #fff;
 }
@@ -82,15 +84,67 @@ nav {
   font-size: x-large;
 }
 
+.side-bar {
+  text-align: center;
+  align-items: center;
+  position: fixed;
+  top: 200px;
+  right: 30px;
+  z-index: 10;
+  background-color: rgb(221, 221, 221);
+  box-shadow: 2px 2px black;
+  opacity: 80%;
+}
 
+.side-bar div {
+  padding: 15px
+}
 
+.arrow {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  z-index: 20;
+}
 
-footer {
-  margin-top: 80px;
+.post-box-list {
+  margin-top: -80px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.post-box-item {
+  margin-bottom: 50px;
+  padding: 30px;
+  width: 500px;
+  color: #000;
+  text-align: center;
+  background-color: rgb(195, 206, 173);
+  border-radius: 10px;
+}
+
+.beebox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 650px;
+  background-color: rgb(195, 206, 173);
+}
+
+.bee {
+  width: 1000px;
+  height: 500px;
+  background-color: #fff;
+  background-image: url(../imges/bee-705412_960_720.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: corver;
+  background-attachment: fixed;
 }
 
 .contact {
-  color: #000;
+  padding-left: 10px;
 }
 
 .gnb-list2 {
@@ -101,7 +155,3 @@ footer {
   font-size: xx-large;
 }
 
-.gnb-item2 a {
-  color: #000;
-  font-weight: 700; 
-}
