--- a/20230524Position1/CSS/style.css
+++ b/20230524Position1/CSS/style.css
@@ -92,7 +92,7 @@ nav {
   right: 30px;
   z-index: 10;
   background-color: rgb(221, 221, 221);
-  box-shadow: 2px 2px black;
+  box-shadow: 2px 2px 3px black;
   opacity: 80%;
 }
 
