--- a/20230524Position1/CSS/TCstyle.css
+++ b/20230524Position1/CSS/TCstyle.css
@@ -38,6 +38,8 @@ header nav {
   width: 100%;
   height: 80px;
   padding: 10px 20px; /* 상하 좌우 */
+  box-sizing: border-box;
+  /* 사이즈에 여백이 더해져서 100px이 되기 때문에 사이즈를 맞춰줌. */
   background-color: skyblue;
 }
 
