--- a/20230524Position1/CSS/TCstyle.css
+++ b/20230524Position1/CSS/TCstyle.css
@@ -41,6 +41,13 @@ header nav {
   box-sizing: border-box;
   /* 사이즈에 여백이 더해져서 100px이 되기 때문에 사이즈를 맞춰줌. */
   background-color: skyblue;
+  transition: color 500ms;
+}
+
+/* nav에 호버했을 때 클래스명 안에 있는 a 태그들한테 속성 적용하겠다
+클래스명 제거하고 a 태그를 잡으면 아래 클래스명 a 태그랑 동시 적용도 되는 듯 */
+header nav:hover a {
+  color: #000;
 }
 
 .logo img {
@@ -54,6 +61,13 @@ header nav {
 .gnb-item a {
   /* a tag에 여백을 주면 근처만 가도 클릭할 수 있다. */
   padding: 20px;
+  /* hover할 때 시간당 단위로 부드럽게 바뀌는 */
+  transition: color 500ms;
+}
+
+.gnb-item a:hover {
+  /* 마우스 올렸을 때 색깔 변경 */
+  color: dodgerblue;
 }
 
 
@@ -136,6 +150,11 @@ header nav {
   background-size: 500px;
   background-position: center bottom;
   background-attachment: fixed; /* 스크롤 붙어서 이동 */
+  transition: 500ms;
+}
+
+.fixed-back-img:hover {
+  transform: scale(1.2);
 }
 
 
@@ -162,6 +181,19 @@ footer {
 
 .icon-item a {
   padding-right: 20px;
+}
+
+.icon-item a i {
+  transition: all 1s;
+  /* 1000ms = 1s, 500ms = 0.5s */
+  /* 500ms 이상 주면 사용자가 느리다고 인식 */
+}
+
+.icon-item a:hover i {
+  color: dodgerblue;
+  transform: scale(1.5);
+  /* scale 크기 변경 */
+  /* transform: rotate(180deg); 180도 회전*/
 }
 
 /* 순서를 잘 볼 것.
@@ -210,5 +242,11 @@ footer {
   /* paddin에 안 먹어서 속성 인라인, 블록 넣어줌 */
   padding: 10px 0;
   color: #888;
+  transition: all 500ms;
+}
+
+.side-menu-item a:hover {
+  text-decoration: underline;
+  color: black;
 }
 
