--- a/20230526flex-alignself/style.css
+++ b/20230526flex-alignself/style.css
@@ -1,4 +1,54 @@
-* {
-  margin: 0;
-  padding: 0;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* vh : viewport height */
+  height: 100vh;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  width: 500px;
+  height: 500px;
+  border: 10px solid darkblue;
+}
+
+.wrapper:hover .box {
+  transform: rotate(-45deg);
+}
+
+.box {
+  width: 100px;
+  height: 100px;
+  border: 5px solid #000;
+  transition: transform 500ms;
+}
+
+.red {
+  background-color: red;
+}
+.wrapper:hover .red {
+  border-color: red;
+}
+
+.yellow {
+  align-self: center;
+  background-color: yellow;
+}
+.wrapper:hover .yellow {
+  border-color: yellow;
+}
+
+.green {
+  align-self: end;
+  background-color: green;
+}
+.wrapper:hover .green {
+  border-color: green;
+}
+
+.red:hover ~ .green {
+  transform: scale(1.5);
 }
