--- a/20230530PositionEx1반응형/CSS/TCstyle.css
+++ b/20230530PositionEx1반응형/CSS/TCstyle.css
@@ -140,13 +140,10 @@ header nav:hover a {
 
 
 
-table {
-  border-spacing: 20px;
-}
 
 .fixed-back {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   height: 600px;
   background-color: rgb(217,241,254);
@@ -279,3 +276,73 @@ footer {
   color: black;
 }
 
+
+
+
+
+
+@media screen and (max-width:1200px) {
+  .gnb-item {
+    font-weight: bold;
+  }
+  .background {
+    height: 500px;
+  }
+  .main-tittle {
+    font-size: 50px;
+  }
+  .main-content {
+    margin-top: 30px;
+    font-size: 20px;
+  }
+  .main-btn {
+    padding: 10px;
+    margin-top: 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: large;
+  }
+
+  .post-card {
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0 20px 0;
+  }
+  .post-card > div {
+    width: 80%;
+    max-width: 600px;
+    min-width: 300px;
+    margin: 20px 0 20px 0;
+    padding: 30px;
+  }
+
+    
+  .fixed-back {
+    height: 500px;
+    justify-content: center;
+  }
+  .fixed-back-img {
+    width: 400px;
+    height: 400px;
+    background-image: url(../imges/pngegg.png);
+    background-size: 400px;
+  }
+  .fixed-back-img2 {
+    width: 0;
+    height: 0;
+    background-image: none;
+  }
+  .fixed-back-img:hover {
+    transform: scale(1.2);
+  }
+}
+
+
+
+
+
+@media screen and (max-width:768px) {
+
+
+  
+}
