--- a/20230530PositionEx1반응형/CSS/TCstyle.css
+++ b/20230530PositionEx1반응형/CSS/TCstyle.css
@@ -143,7 +143,7 @@ header nav:hover a {
 
 .fixed-back {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   height: 600px;
   background-color: rgb(217,241,254);
@@ -324,7 +324,7 @@ footer {
   .fixed-back-img {
     width: 400px;
     height: 400px;
-    background-image: url(../imges/pngegg.png);
+    background-image: url(../imges/스누피2.png);
     background-size: 400px;
   }
   .fixed-back-img2 {
@@ -342,7 +342,54 @@ footer {
 
 
 @media screen and (max-width:768px) {
+  .background {
+    height: 400px;
+  }
+  .main-tittle {
+    font-size: 50px;
+  }
+  .main-content {
+    margin-top: 40px;
+    font-size: 20px;
+  }
+  .post-card > div {
+    max-width: 400px;
+    min-width: 200px;
+  }
 
+  .fixed-back {
+    height: 300px;
+    justify-content: center;
+  }
+  .fixed-back-img {
+    width: 400px;
+    height: 300px;
+    background-image: url(../imges/스누피2.png);
+    background-size: 400px;
+  }
+  .fixed-back-img2 {
+    width: 0;
+    height: 0;
+    background-image: none;
+  }
+  .fixed-back-img:hover {
+    transform: scale(1.2);
+  }
 
-  
+  .side-menu {
+    display: none;
+  }
+
+    
+  footer {
+    padding: 20px 0;
+  }
+  .global-footer {
+    flex-direction: column;
+    width: auto;
+    align-items: center;
+  }
+  .icon-list {
+    padding: 10px;
+  }
 }
