--- a/20230530PositionEx1반응형/CSS/TCstyle.css
+++ b/20230530PositionEx1반응형/CSS/TCstyle.css
@@ -348,54 +348,45 @@ footer {
 
 
 @media screen and (max-width:768px) {
+  .logo img {
+    width: 40px;
+  }
+  .gnb-item a {
+    padding: 10px;
+  }
   .background {
-    height: 400px;
+    height: 300px;
   }
   .main-tittle {
-    font-size: 50px;
+    font-size: 36px;
   }
-  .main-content {
-    margin-top: 40px;
-    font-size: 20px;
-  }
+
   .post-card > div {
-    max-width: 400px;
-    min-width: 200px;
+    min-width: 300px;
+    padding: 20px;
   }
 
   .fixed-back {
-    height: 300px;
-    justify-content: center;
+    height: 250px;
   }
-  .fixed-back-img {
-    width: 400px;
-    height: 300px;
-    background-image: url(../imges/스누피2.png);
-    background-size: 400px;
+  .bgc-box {
+    background-size: 250px;
+    height: 250px;
   }
-  .fixed-back-img2 {
-    width: 0;
-    height: 0;
-    background-image: none;
+
+  .global-footer {
+    flex-direction: column;
+    align-items: center;
   }
-  .fixed-back-img:hover {
-    transform: scale(1.2);
+  .icon-list {
+    margin-top: 10px;
+  }
+
+  .top-btn i {
+    font-size: 32px;
   }
 
   .side-menu {
     display: none;
-  }
-
-    
-  footer {
-    padding: 20px 0;
-  }
-  .global-footer {
-    flex-direction: column;
-    width: auto;
-    align-items: center;
-  }
-  .icon-list {
-    padding: 10px;
   }
 }
