--- a/20230531CSSAnimation/style.css
+++ b/20230531CSSAnimation/style.css
@@ -1,3 +1,126 @@
-body {
-  background-color: black;
+
+
+
+.box {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  background-color: orange;
+  /* border-radius: 50%; */
+  animation-name: move1;
+  /* animation 재생 시간 */
+  animation-duration: 2s;
+  /* 반복 */
+  animation-iteration-count: infinite;
+  /* animation 재생 설정(앞으로, 뒤로, 번갈아 재생)
+   - nomal : 앞으로
+   - alternate : 앞 뒤
+   - reverse : 반대로 
+   - alternate-reverse : 뒤 앞 */
+  animation-direction: alternate; /* 방향 전환 */
 }
+
+@keyframes move1 {
+  /* 시작점, 왼쪽부터 시작해라. */
+  0% {
+    left : 0;
+  }
+  25% {
+    background-color: wheat;
+    left: 100px;
+  }
+  50% {
+    background-color: yellow;
+    left : 200px;
+  }
+  75% {
+    background-color: aquamarine;
+    left : 300px;
+  }
+  100% {
+    background-color: green;
+    left : 400px;
+  }
+}
+
+@keyframes move2 {
+  from {
+    background-color: tomato;
+    left : 0;
+  }
+  to {
+    background-color: aquamarine;
+    left : 300px;
+    transform: scale(1.2);
+  }
+}
+
+
+
+
+
+.line-active {
+  position: relative;
+}
+
+.line {
+  position: absolute;
+  /* position: relative; */
+  display : inline-block;
+  width: 30px;
+  height: 3px;
+  animation-name: linemove;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+}
+
+.line-active span:first-child {
+  top: 0;
+  background-color: red;
+  box-shadow: 0 0 2px 1px red;
+  /* animation-name: redline;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate; */
+}
+
+.line-active span:last-child {
+  bottom: 0;
+  background-color: blue;
+  box-shadow: 0 0 2px 1px blue;
+  animation-delay: 0.5s;
+  /* animation-name: blueline;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse; */
+}
+
+
+@keyframes linemove {
+  from {
+    left : 0;
+  }
+  to {
+    left : 173px;
+  }
+}
+
+/* @keyframes redline {
+  0% {
+    left : 0;
+  }
+  100% {
+    left : 300px;
+  }
+}
+
+@keyframes blueline {
+  0% {
+    left : 0;
+  }
+  100% {
+    left : 300px;
+  }
+} */
+
