--- a/20230601맥도날드/style.css
+++ b/20230601맥도날드/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   /* font-family: 'Nanum Pen Script', cursive; */
 }
 
@@ -17,6 +18,7 @@ a {
 }
 
 header {
+  width: 100%;
   height: 80px;
 }
 
@@ -24,6 +26,7 @@ header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   height: 80px;
   padding: 0 10px 0 20px;
 }
@@ -40,4 +43,75 @@ header nav {
   padding: 20px;
   font-weight: bold;
   color: black;
+}
+
+
+
+
+
+
+
+footer {
+  width: 100%;
+  height: 120px;
+  background-color: red;
+}
+
+footer nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
+  width: 100%;
+  height: 120px;
+  font-size: 10px;
+  font-weight: lighter;
+  text-decoration: none;
+  color: #fff;
+}
+
+footer nav a {
+  color: #fff;
+}
+
+footer nav a:hover {
+  color: yellow;
+}
+
+.info1 {
+  display: flex;
+}
+
+.gnb-list2 {
+  padding-left: 30px;
+}
+
+.gnb-list3 {
+  padding-left: 50px;
+}
+
+.gnb-list4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 30px;
+}
+
+.gnb-list4 > div {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 35px;
+  font-size: 17px;
+  background-color: #fff;
+  margin-left: 10px;
+}
+
+.gnb-list4 > div:first-child {
+  margin-left: 0;
+}
+
+.gnb-list4 > div:hover {
+  background-color: yellow;
 }
