--- a/20230601맥도날드/style.css
+++ b/20230601맥도날드/style.css
@@ -33,7 +33,7 @@ header nav {
 }
 
 .logo img {
-  width: 50px;
+  width: 60px;
 }
 
 .gnb-list {
@@ -229,3 +229,105 @@ footer nav a:hover {
 .gnb-list4 > div:hover {
   background-color: yellow;
 }
+
+
+
+
+@media screen and (max-width:1200px) {
+  .gnb-list::before {
+    content:"\f0c9";
+    font-family: "FontAwesome";
+    font-weight: 900;
+    font-size: larger;
+    margin-right: 30px;
+  }
+  .gnb-item {
+    display: none;
+  }
+  .main-bar-list {
+    justify-content: center;
+  }
+  .back {
+    height: 500px;
+  }
+  .post-box-list {
+    flex-direction: column;
+    align-items: center;
+  }
+  .post-box-item {
+    width: 80%;
+    height: 300px;
+  }
+  .post-box-item p {
+    padding: 20px;
+  }
+  .main-bar-bottom ul {
+    justify-content: space-around;
+  }
+  
+  footer {
+    height: 200px;
+  }
+  footer nav {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: justify;
+    width: 100%;
+    height: 150px;
+    font-size: 10px;
+    font-weight: lighter;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .info1 {
+    display: flex;
+  }
+
+  .gnb-list2 {
+    padding-left: 30px;
+  }
+
+  .gnb-list3 {
+    padding-left: 50px;
+  }
+
+  .gnb-list4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 30px;
+  }
+
+  .gnb-list4 > div {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 35px;
+    font-size: 17px;
+    background-color: #fff;
+    margin-left: 10px;
+  }
+
+  .gnb-list4 > div:first-child {
+    margin-left: 0;
+  }
+
+  .gnb-list4 > div:hover {
+    background-color: yellow;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
