💄 lnb styling(position:sticky)

--- a/20230601맥도날드/TCstyle.css
+++ b/20230601맥도날드/TCstyle.css
@@ -57,32 +57,30 @@ nav {
 }
 
 /* ----------------------------------------------header---------------------------- */
-
-.main-bar-top {
+/* 포지션 지정 시 부모 기준이 중요 */
+.lnb-wrapper {
   position: sticky;
   top: 0;
-  width: 100%;
-  height: 60px;
-  background-color: red;
 }
 
-.main-bar-list {
+.lnb-list {
   display: flex;
-  align-items: center;
-  width: 100%;
-  height: 60px;
+  padding: 20px 0;
+  border-top: 3px solid rgb(255,213,23);
+  background-color: rgb(235,27,27);
 }
 
-.main-bar-list a {
+.lnb-item:first-child {
+  margin-left: 20px;
+}
+
+.lnb-list a {
   color: #fff;
+  padding: 0 20px;
 }
 
-.main-bar-list a:hover {
+.lnb-item a:hover {
   color: yellow;
-}
-
-.main-bar-item {
-  padding: 0 30px;
 }
 
 /* ---------------------------------------main-bar-top----------------------------- */
