--- a/20230601맥도날드/TCstyle.css
+++ b/20230601맥도날드/TCstyle.css
@@ -61,7 +61,7 @@ nav {
 .lnb-wrapper {
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .lnb-list {
@@ -137,6 +137,13 @@ nav {
   width: 300px;
   height: 250px;
   object-fit: cover;
+}
+
+.food-box-txt {
+  width: 90%;
+  margin: 30px auto;
+  text-align: center;
+  font-weight: bold;
 }
 
 /* ---------------------------------------main-bar-bottom-------------------------- */
