--- a/20230601맥도날드/TCstyle.css
+++ b/20230601맥도날드/TCstyle.css
@@ -114,8 +114,6 @@ nav {
 }
 
 .food-box-item {
-  display: flex;
-  justify-content: center;
   width: 300px;
   margin-right: 30px;
   border-radius: 10px;
@@ -146,9 +144,9 @@ nav {
   font-weight: bold;
 }
 
-/* ---------------------------------------main-bar-bottom-------------------------- */
+/* ---------------------------------------global-footer-------------------------- */
 
-.main-bar-bottom {
+.global-footer {
   position: sticky;
   bottom: 0;
   width: 100%;
@@ -156,7 +154,7 @@ nav {
   background-color: #fff;
 }
 
-.main-bar-bottom ul {
+.global-footer ul {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -164,14 +162,14 @@ nav {
   padding: 20px 0;
 }
 
-.main-bar-list2 img {
+.mac-link-list img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
 
 }
 
-.main-bar-list2 > div {
+.mac-link-list > div {
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -179,11 +177,11 @@ nav {
   line-height: 35px;
 }
 
-.main-bar-item2 {
+.mac-link-item {
   padding: 0 10px;
 }
 
-.main-bar-item2 > a {
+.mac-link-item > a {
   color: black;
 }
 
@@ -285,7 +283,7 @@ footer nav a:hover {
   .post-box-item p {
     padding: 20px;
   }
-  .main-bar-bottom ul {
+  .global-footer ul {
     justify-content: space-around;
   }
   
