--- a/20230601맥도날드/TCstyle.css
+++ b/20230601맥도날드/TCstyle.css
@@ -144,202 +144,43 @@ nav {
   font-weight: bold;
 }
 
-/* ---------------------------------------global-footer-------------------------- */
+/* ---------------------------------------mac-story-box-------------------------- */
 
-.global-footer {
+.mac-story-box {
   position: sticky;
   bottom: 0;
-  width: 100%;
-  border-top: 5px solid yellow;
-  background-color: #fff;
-}
-
-.global-footer ul {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  z-index: 10;
+  margin-top: 30px;
   padding: 20px 0;
-}
-
-.mac-link-list img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-
-}
-
-.mac-link-list > div {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
   text-align: center;
-  line-height: 35px;
+  background-color: #fff;
+  border-top: 3px solid rgb(255,213,23);
 }
 
-.mac-link-item {
-  padding: 0 10px;
+.mac-story-list {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  margin: 0 auto;
 }
 
-.mac-link-item > a {
-  color: black;
+.mac-story-item img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
 }
+
 
 /* -------------------------footer------------------------------------------------- */
 
-footer {
-  width: 100%;
-  height: 110px;
-  background-color: red;
-}
 
-footer nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: left;
-  width: 100%;
-  height: 110px;
-  font-size: 10px;
-  font-weight: lighter;
-  text-decoration: none;
-  color: #fff;
-}
-
-footer nav a {
-  color: #fff;
-}
-
-footer nav a:hover {
-  color: yellow;
-}
-
-.info1 {
-  display: flex;
-}
-
-.gnb-list2 {
-  padding-left: 30px;
-}
-
-.gnb-list3 {
-  padding-left: 50px;
-}
-
-.gnb-list4 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-right: 30px;
-}
-
-.gnb-list4 > div {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 35px;
-  font-size: 17px;
-  background-color: #fff;
-  margin-left: 10px;
-}
-
-.gnb-list4 > div:first-child {
-  margin-left: 0;
-}
-
-.gnb-list4 > div:hover {
-  background-color: yellow;
-}
 
 
 
 
 @media screen and (max-width:1200px) {
-  .gnb-list::before {
-    content:"\f0c9";
-    font-family: "FontAwesome";
-    font-weight: 900;
-    font-size: larger;
-    margin-right: 30px;
-  }
-  .gnb-item {
-    display: none;
-  }
-  .main-bar-list {
-    justify-content: center;
-  }
-  .back {
-    height: 500px;
-  }
-  .post-box-list {
-    flex-direction: column;
-    align-items: center;
-  }
-  .post-box-item {
-    width: 80%;
-    height: 300px;
-  }
-  .post-box-item p {
-    padding: 20px;
-  }
-  .global-footer ul {
-    justify-content: space-around;
-  }
-  
-  footer {
-    height: 200px;
-  }
-  footer nav {
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: justify;
-    width: 100%;
-    height: 150px;
-    font-size: 10px;
-    font-weight: lighter;
-    text-decoration: none;
-    color: #fff;
-  }
 
-  .info1 {
-    display: flex;
-  }
-
-  .gnb-list2 {
-    padding-left: 30px;
-  }
-
-  .gnb-list3 {
-    padding-left: 50px;
-  }
-
-  .gnb-list4 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-right: 30px;
-  }
-
-  .gnb-list4 > div {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 35px;
-    font-size: 17px;
-    background-color: #fff;
-    margin-left: 10px;
-  }
-
-  .gnb-list4 > div:first-child {
-    margin-left: 0;
-  }
-
-  .gnb-list4 > div:hover {
-    background-color: yellow;
-  }
 }
 
 
