--- a/20230601맥도날드/TCstyle.css
+++ b/20230601맥도날드/TCstyle.css
@@ -356,7 +356,9 @@ footer {
     width: 40px;
     height: 40px;
   }
-  
+
+  /* ----------------------------------사이드바----------------------------- */
+
   .sidebar {
     position: fixed;
     top:0;
@@ -367,7 +369,16 @@ footer {
     padding: 32px 20px;
     background-color: #fff;
     transform: translateX(-200px);
+    transition: transform 300ms ease-in-out;
   }
+
+  .sidebar.is-active {
+    /* transition: all 0.5s ease-out; */
+    transform: translateX(0);
+  }
+  /* f12 개발자 모드에서 추가 클래스 작동하는지 확인 후
+  (html에서 수동으로 넣고 확인 후 삭제) 자바스크립트로 코딩  */
+
   .side-menu-item a {
     display: inline-block;
     padding: 10px;
@@ -389,8 +400,17 @@ footer {
     /* display:none은 transition이 안 먹는다. */
     /* UI Animation 효과를 주고 싶다면, visibility를 사용해야 한다. */
     visibility: hidden;
+    opacity: 0;
     background-color: rgba(63,65,80,0.5);
+    transition: all 300ms ease-in-out;
   }
+
+  .overlay.is-active {
+    visibility: visible;
+    opacity: 1;
+  }
+  /* f12 개발자 모드에서 추가 클래스 작동하는지 확인 후
+  (html에서 수동으로 넣고 확인 후 삭제) 자바스크립트로 코딩  */
 }
 
 
