♻️ 수정, 임시 저장

--- a/20230609Lego반응형/style.css
+++ b/20230609Lego반응형/style.css
@@ -273,6 +273,10 @@ aside hr {
   .gnb-item2 {
     padding-right: 20px;
   }
+
+  .gnb-item2 i {
+    display: none;
+  }
   
   .lnb-item:first-child {
     padding-left: 30px;
