--- a/20230609Lego반응형/style.css
+++ b/20230609Lego반응형/style.css
@@ -171,6 +171,122 @@ aside hr {
 }
 
 
+
+
+
+
+
+
+
+/* ---------------참조용 임시------------------ */
+
+
+.drawer-menu {
+  border-top: 1px solid #e0e2e7;
+}
+
+.drawer-menu.is-open.is-product .drawer-menu-content {
+  /* drawer-menu-item height * li 갯수 */
+  max-height: 288px;
+}
+
+.drawer-menu.is-open.is-brand .drawer-menu-content {
+  max-height: 216px;
+}
+
+.drawer-menu.is-open.is-info .drawer-menu-content {
+  max-height: 180px;
+}
+
+.drawer-menu.is-open .fa-chevron-down {
+  transform: translateY(-50%) rotate(180deg);
+}
+
+.drawer-menu-button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  color: #3f4150;
+  width: 100%;
+  height: 54px;
+  padding: 0 8px;
+  font-weight: 700;
+}
+
+.drawer-menu-button i:first-child {
+  margin-right: 8px;
+  font-size: 24px;
+  color: #3f4150;
+  font-size: 20px;
+}
+
+.drawer-menu-button i:last-child {
+  position: absolute;
+  top: 50%;
+  right: 8px;
+  transform: translateY(-50%);
+  font-size: 14px;
+  color: #3f4150;
+  transition: transform 200ms ease-in-out;
+}
+
+.drawer-menu-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 200ms ease-in-out;
+}
+
+.drawer-menu-item a {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #3f4150;
+  width: 100%;
+  height: 36px;
+  padding: 0 12px;
+  font-weight: 700;
+}
+
+.drawer-menu.is-active .drawer-menu-button i{
+  color: rgb(255, 204, 0);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(63, 65, 80, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 300ms ease-in-out;
+  transition: visibility 300ms ease-in-out;
+}
+
+.overlay.is-active {
+  opacity: 1;
+  visibility: visible;
+}
+
+
+
+/* ---------------------------참조용 임시  */
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* -------------------------------------------------------사이드바 */
 
 @media screen and (min-width:768px) {
