--- a/20230620Navigation/style.css
+++ b/20230620Navigation/style.css
@@ -4,23 +4,28 @@
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .container {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .site-header {
   width: 800px;
 }
-
 .site-header nav {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-.site-header ul {
-  display: flex;
-}
-
 .site-header nav ul {
   display: flex;
   list-style: none;
