--- a/20230620Gallery/style.css
+++ b/20230620Gallery/style.css
@@ -18,6 +18,7 @@ html, body {
   width: calc(100%/4);
   height: 100vh;
   overflow: hidden;
+  transition: all 500ms cubic-bezier(0.078, 0.06, 0.15, 0.93);
 }
 .image-item.active {
   width: 80%;
@@ -27,5 +28,14 @@ html, body {
   height: 100%;
   max-width: 100%;
   object-fit: cover;
+  transform: scale(1);
+  /* 1000ms = 1s, 200ms = 0.2s */
+  /* ease-in, ease, linear, ease-in-out */
+  transition: all 200ms cubic-bezier(0.078, 0.06, 0.15, 0.93);
+  /* hsl - hue / saturate 채도 / lightness */
+  filter: grayscale(90%);
 }
-
+.image-item.active img {
+  transform: scale(1.05);
+  filter: grayscale(0%);
+}
