--- a/20230621PageNavigation/style.css
+++ b/20230621PageNavigation/style.css
@@ -27,6 +27,8 @@ html, body {
   가장 마지막 요소가 위로 올라온다. */
   position: fixed;
   display: flex;
+  /* 하단 정렬 */
+  align-items: flex-end;
   width: 100%;
   height: 100%;
   /* background-color: red; */
@@ -34,6 +36,7 @@ html, body {
   background-position: center center;
   visibility: hidden;
   opacity: 0;
+  color: white;
 }
 .container .page:nth-child(1){
   background-image: url(./static/catright.jpg);
@@ -50,6 +53,16 @@ html, body {
 .container .page.active {
   visibility: visible;
   opacity: 1;
+}
+
+
+/* content */
+.container .page .content {
+  display: flex;
+  flex-direction: column;
+  /* 상, 좌우, 하 */
+  padding: 2rem 2rem 5rem;
+  text-shadow: 0 1px 3px rgba(0,0,0,1);
 }
 
 
