--- a/20230621PageNavigation/style.css
+++ b/20230621PageNavigation/style.css
@@ -27,8 +27,6 @@ html, body {
   가장 마지막 요소가 위로 올라온다. */
   position: fixed;
   display: flex;
-  /* 하단 정렬 */
-  align-items: flex-end;
   width: 100%;
   height: 100%;
   /* background-color: red; */
@@ -37,6 +35,8 @@ html, body {
   visibility: hidden;
   opacity: 0;
   color: white;
+  /* 하단 정렬 */
+  align-items: flex-end;
 }
 .container .page:nth-child(1){
   background-image: url(./static/catright.jpg);
@@ -64,6 +64,16 @@ html, body {
   padding: 2rem 2rem 5rem;
   text-shadow: 0 1px 3px rgba(0,0,0,1);
   opacity: 0;
+  z-index: 100;
+}
+.container .page::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, black);
 }
 .container .page.active .content {
   opacity: 0;
